# flake-module-container

./: .gitignore  .tmp  README.md  flake.nix  pyproject.toml
hello/: __init__.py
