[tool.poetry]
name = "hello"
version = "0.1.0"
description = "Demo app to test in container"
authors = ["Jeff Hutchison <jeff@jeffhutchison.com>"]
packages = [{include = "hello"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-restful = "^0.3.9"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
